--- a/app/views/spree/admin/shared/sub_menu/_analysis_reports.html.erb
+++ b/app/views/spree/admin/shared/sub_menu/_analysis_reports.html.erb
@@ -1,3 +1,8 @@
 <ul id="sidebar-analysis" class="border-top bg-white collapse nav nav-pills nav-stacked" data-hook="analysis_reports">
-  <%= tab :oauth_applications, match_path: '/oauth_applications', label: 'oAuth Applications', do_not_titleize: true %>
+
+  <% Spree::ReportGenerationService.reports.each do |_key, _value| %>
+    <li class="sidebar-menu-item <%= (selected?(params[:report_category], _key) ? 'selected' : '') %>">
+      <%= link_to Spree.t(_key), admin_insight_path(report_category: _key, id: _value.first)  %>
+    </li>
+  <% end %>
 </ul>
