Added template and populated chart data

--- a/app/views/spree/admin/analysis/index.html.erb
+++ b/app/views/spree/admin/analysis/index.html.erb
@@ -1,16 +1,17 @@
 <% content_for :page_title do %>
-  <%= Spree.t(:heading, type: params[:report_category].to_s.titleize, scope: :insight) %>
+  <%= Spree.t(:heading, type: params[:report_category].to_s.titleize, scope: :analysis) %>
 <% end %>
 
 <% content_for :title do %>
-  <%= Spree.t(:heading, type: params[:report_category].to_s.titleize, scope: :insight) %>
+  <%= Spree.t(:heading, type: params[:report_category].to_s.titleize, scope: :analysis) %>
 <% end %>
 
 <div id='insights-div' class='container-fluid' >
   <div class="row">
-    <%= select_tag :reports, options_for_select(@reports.map { |report_name| [ Spree.t(:title, scope: [:insight, report_name]), report_name, data: { url: admin_analysis_url(report_name, report_category: params[:report_category]) }] }.unshift(['Select a report', '', data: { url: admin_analysis_index_url(report_category: params[:report_category]) }, disabled: true]), @report_name || ''), class: 'select2' %>
+    <%= select_tag :reports, options_for_select(@reports.map { |report_name| [ Spree.t(:title, scope: [:analysis, report_name]), report_name, data: { url: admin_analysis_url(report_name, report_category: params[:report_category]) }] }.unshift(['Select a report', '', data: { url: admin_analysis_index_url(report_category: params[:report_category]) }, disabled: true]), @report_name || ''), class: 'select2' %>
   </div>
 </div>
+
 <%= content_tag(:div, class: 'hidden report-data', data: { report_data: @report_data_json }) {} %>
 
 <div id='report-container'>
@@ -86,6 +87,6 @@
   </div>
 </div>
 
-<%#= render partial: 'spree/admin/templates/insights/show', formats: [:template] %>
-<%#= render partial: 'spree/admin/templates/insights/paginator', formats: [:template] %>
-<%#= render partial: 'spree/admin/templates/insights/search', formats: [:template] %>
+<%= render partial: 'spree/admin/templates/analysis/show', formats: [:template] %>
+<%= render partial: 'spree/admin/templates/analysis/paginator', formats: [:template] %>
+<%= render partial: 'spree/admin/templates/analysis/search', formats: [:template] %>
