--- a/app/views/spree/admin/analysis/index.html.erb
+++ b/app/views/spree/admin/analysis/index.html.erb
@@ -27,7 +27,8 @@
           </span>
           
           <%= form_tag form_action(@report_name, params[:report_category]), id: "quick-search", class: "flex-grow-1" do %>
-            <%= text_field_tag :quick_search, nil, class: "form-control js-quick-search", placeholder: Spree.t(:quick_search) %>
+            <%= label_tag :quick_search, '', class: 'd-none' %>
+            <%= text_field_tag :quick_search, nil, class: "form-control js-quick-search-target", placeholder: Spree.t(:quick_search) %>
           <% end %>
         </div>
         <div id="table-filter" data-hook class="well filter-well">
