--- a/app/views/spree/admin/analysis/_chart.html.erb
+++ b/app/views/spree/admin/analysis/_chart.html.erb
@@ -1,4 +1,4 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
-<div id="chart-container" style="margin: 0 auto" class='hidden'></div>
+<div id="chart-container" style="margin: 0 auto" class='d-none mt-3'></div>
