Fix for downloading PDF

--- a/app/views/spree/layouts/pdf.pdf.erb
+++ b/app/views/spree/layouts/pdf.pdf.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= stylesheet_link_tag "spree/backend/override_pdf" %>
+  <%= wicked_pdf_stylesheet_link_tag "spree/backend/override_pdf" %>
 </head>
 <body>
   <%= yield %>
